# textnano

./: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  setup.py  urls.txt
.github/workflows/: publish.yml  test-publish.yml  test0publish.yml
demo_dataset/: failed.txt
demo_dedup/: failed.txt
test_output/: failed.txt
tests/: test_core.py
textnano/: __init__.py  __main__.py  cli.py  config.py  core.py  utils.py
textnano/examples/: demo_dupes.txt  demo_textnano.py  demo_urls.txt  sample_urls.txt
textnano/extractors/: __init__.py  gutenberg.py  reddit.py  wikipedia.py
